[gd_scene load_steps=21 format=4 uid="uid://b6r8iwvwwwjqo"]

[ext_resource type="PackedScene" uid="uid://btcov1o8dycyk" path="res://scenes/player.tscn" id="1_0ojeu"]
[ext_resource type="Script" uid="uid://cwu7m3ot7nrst" path="res://scripts/test_scene_eloy.gd" id="1_2pyty"]
[ext_resource type="PackedScene" uid="uid://bqd84onn4ljx6" path="res://scenes/basic_platform.tscn" id="2_4yv2b"]
[ext_resource type="Script" uid="uid://dxdr4vkvtrrrk" path="res://scripts/camera_2d.gd" id="3_egwr4"]
[ext_resource type="Script" uid="uid://fg5omipajrkd" path="res://scripts/you_win.gd" id="3_ylc0x"]
[ext_resource type="AudioStream" uid="uid://dryqit84wko4y" path="res://assets/sfx/you-died-dark-souls.mp3" id="4_6b8dj"]
[ext_resource type="Script" uid="uid://ycilsyhw4fjt" path="res://scripts/path_2d.gd" id="5_2pyty"]
[ext_resource type="Script" uid="uid://behuc7jo3mxka" path="res://scripts/ultra_instinct_layer.gd" id="8_y2iih"]

[sub_resource type="TileSetScenesCollectionSource" id="TileSetScenesCollectionSource_ylc0x"]
scenes/1/scene = ExtResource("2_4yv2b")

[sub_resource type="TileSet" id="TileSet_0ojeu"]
tile_layout = 4
tile_size = Vector2i(64, 64)
sources/0 = SubResource("TileSetScenesCollectionSource_ylc0x")

[sub_resource type="Gradient" id="Gradient_4yv2b"]
offsets = PackedFloat32Array(0.61, 1)
colors = PackedColorArray(0, 0, 0, 0, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ylc0x"]
gradient = SubResource("Gradient_4yv2b")
fill = 1
fill_from = Vector2(0.49766356, 0)
fill_to = Vector2(0.5140187, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4yv2b"]
size = Vector2(42, 53)

[sub_resource type="Curve2D" id="Curve2D_6b8dj"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, -34, 0, 0, 0, 0, 368, -32, 0, 0, 0, 0, 416, -80, 0, 0, 0, 0, 512, -80, 0, 0, 0, 0, 568, -144, 0, 0, 0, 0, 824, -144)
}
point_count = 6

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ehwlh"]
size = Vector2(112.289856, 111.85713)

[sub_resource type="Gradient" id="Gradient_ehwlh"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_2pyty"]
gradient = SubResource("Gradient_ehwlh")

[sub_resource type="Gradient" id="Gradient_egwr4"]
offsets = PackedFloat32Array(0, 0.27333334)
colors = PackedColorArray(1, 0, 0, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_y2iih"]
gradient = SubResource("Gradient_egwr4")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y2iih"]
bg_color = Color(0.64705884, 0.16470589, 0.16470589, 1)

[node name="TestSceneEloy" type="Node2D"]
script = ExtResource("1_2pyty")

[node name="CharacterBody2D" parent="." instance=ExtResource("1_0ojeu")]
position = Vector2(304, 33)

[node name="Camera2D" type="Camera2D" parent="CharacterBody2D"]
zoom = Vector2(1.5, 1.5)
position_smoothing_enabled = true
script = ExtResource("3_egwr4")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
position = Vector2(320, 0)
tile_map_data = PackedByteArray("AAD+/wEAAAAAAAAAAQD//wEAAAAAAAAAAQAAAAEAAAAAAAAAAQABAAEAAAAAAAAAAQACAAAAAAAAAAAAAQADAAAAAAAAAAAAAQAEAP//AAAAAAAAAQAFAP//AAAAAAAAAQAGAP//AAAAAAAAAQAHAP//AAAAAAAAAQAIAP//AAAAAAAAAQD8/wEAAAAAAAAAAQD9/wEAAAAAAAAAAQD7/wEAAAAAAAAAAQA=")
tile_set = SubResource("TileSet_0ojeu")

[node name="Exit" type="Area2D" parent="."]
position = Vector2(839, -74)

[node name="Sprite2D" type="Sprite2D" parent="Exit"]
position = Vector2(0, -22)
texture = SubResource("GradientTexture2D_ylc0x")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Exit"]
visible = false
position = Vector2(0, -16)
shape = SubResource("RectangleShape2D_4yv2b")

[node name="Exit" type="Label" parent="Exit"]
offset_left = -27.0
offset_top = -111.0
offset_right = 30.0
offset_bottom = -66.0
theme_override_font_sizes/font_size = 32
text = "Exit"

[node name="YouDiedLayer" type="CanvasLayer" parent="."]
visible = false
script = ExtResource("3_ylc0x")

[node name="Panel" type="Panel" parent="YouDiedLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="YouDied" type="Label" parent="YouDiedLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -219.0
offset_top = -44.0
offset_right = 219.0
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.5058824, 0.15686275, 0.16470589, 1)
theme_override_font_sizes/font_size = 256
text = "YOU DIED"

[node name="WinAudio" type="AudioStreamPlayer" parent="YouDiedLayer"]
stream = ExtResource("4_6b8dj")

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource("Curve2D_6b8dj")
script = ExtResource("5_2pyty")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2(-0.11228096, -13.340305)
rotation = 0.0054347296
v_offset = 20.66
cubic_interp = false

[node name="Area2D" type="Area2D" parent="Path2D/PathFollow2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Path2D/PathFollow2D/Area2D"]
position = Vector2(0.0026362538, 0.07651925)
shape = SubResource("RectangleShape2D_ehwlh")

[node name="Sprite2D" type="Sprite2D" parent="Path2D/PathFollow2D/Area2D"]
scale = Vector2(1.7562985, 1.7562985)
texture = SubResource("GradientTexture2D_2pyty")

[node name="UltraInstinctLayer" type="CanvasLayer" parent="."]
script = ExtResource("8_y2iih")

[node name="UltraInstinctTint" type="TextureRect" parent="UltraInstinctLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_y2iih")

[node name="UltraInstinctTint2" type="TextureRect" parent="UltraInstinctLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_y2iih")
flip_h = true

[node name="ProgressBar" type="ProgressBar" parent="UltraInstinctLayer"]
anchors_preset = 10
anchor_right = 1.0
offset_left = 528.0
offset_top = 88.0
offset_right = -520.0
offset_bottom = 115.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.95, 0.95, 0.95, 1)
theme_override_styles/fill = SubResource("StyleBoxFlat_y2iih")
step = 1.0
value = 100.0

[connection signal="entered_ultra_instinct_mode" from="CharacterBody2D" to="CharacterBody2D/Camera2D" method="_on_character_body_2d_entered_ultra_instinct_mode"]
[connection signal="entered_ultra_instinct_mode" from="CharacterBody2D" to="Path2D" method="_on_character_body_2d_entered_ultra_instinct_mode"]
[connection signal="entered_ultra_instinct_mode" from="CharacterBody2D" to="UltraInstinctLayer" method="_on_character_body_2d_entered_ultra_instinct_mode"]
[connection signal="left_ultra_instrinct_mode" from="CharacterBody2D" to="CharacterBody2D/Camera2D" method="_on_character_body_2d_left_ultra_instrinct_mode"]
[connection signal="left_ultra_instrinct_mode" from="CharacterBody2D" to="Path2D" method="_on_character_body_2d_left_ultra_instrinct_mode"]
[connection signal="left_ultra_instrinct_mode" from="CharacterBody2D" to="UltraInstinctLayer" method="_on_character_body_2d_left_ultra_instrinct_mode"]
[connection signal="body_entered" from="Exit" to="YouDiedLayer" method="_on_area_2d_body_entered"]
[connection signal="restart_level" from="YouDiedLayer" to="." method="_on_canvas_layer_restart_level"]
[connection signal="body_entered" from="Path2D/PathFollow2D/Area2D" to="YouDiedLayer" method="_on_area_2d_body_entered"]
[connection signal="ultra_instinct_depleted" from="UltraInstinctLayer" to="CharacterBody2D" method="_on_ultra_instinct_layer_ultra_instinct_depleted"]
